--- a/views/index.twig
+++ b/views/index.twig
@@ -34,9 +34,9 @@
                                             <i title="Description" data-toggle="popover" data-placement="top" data-content="{{ cards.description }}" class="fa fa-question-circle" aria-hidden="true" data-html="true"></i>
                                         </div>
                                         <div class="card-counter" id="card-counter-{{ cards.id }}">
-                                            <button type="button" class="btn-incremented-counter btn" data-children-input="card_{{ cards.id }}">+</button>
-                                            <button type="button" class="btn-decremented-counter btn" data-children-input="card_{{ cards.id }}">-</button>
-                                            <input style="width: 20%; text-align: center" class="counter_card" id="card_{{ cards.id }}" type="text" value="0"/>
+                                            <p class="counter_card" id="card_{{ cards.id }}" type="text" value="0">0</p>
+                                            <p class="btn-incremented-counter btn-card-counter" data-children-input="card_{{ cards.id }}">+</p>
+                                            <p class="btn-decremented-counter btn-card-counter" data-children-input="card_{{ cards.id }}">-</p>
 
                                         </div>
                                     </div>
