--- a/views/layout.twig
+++ b/views/layout.twig
@@ -4,9 +4,10 @@
         <title>THE LOST DOG</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% block stylsheets %}
-            <link rel='stylesheet' href='/stylesheets/style.css' />
+            <link rel='stylesheet' href='/stylesheets/style.css'/>
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+            <link rel="stylesheet" href="/fa/css/all.css">
             <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
         {% endblock %}
     </head>
@@ -22,6 +23,7 @@
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+            <script type="text/javascript" src="/fa/js/all.js"></script>
             <script src="/socket.io/socket.io.js"></script>
             <script src="/js/custom.js"></script>
             <script>
