--- a/views/layout.twig
+++ b/views/layout.twig
@@ -9,6 +9,7 @@
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
             <link rel="stylesheet" href="/fa/css/all.css">
             <link rel="stylesheet" href="/animate/animate.css">
+            <link rel="stylesheet" href="/hover/css/hover.css">
             <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
         {% endblock %}
     </head>
@@ -26,7 +27,7 @@
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
             <script type="text/javascript" src="/fa/js/all.js"></script>
             <script src="/socket.io/socket.io.js"></script>
-            <script src="/js/custom.js"></script>
+            <script type="module" src="/js/custom.js"></script>
             <script>
                 var socketIo = io();
             </script>
