--- a/views/index.twig
+++ b/views/index.twig
@@ -6,9 +6,11 @@
 
 {% block body %}
     <div class="container">
+        <h2 class="head-title"></h2>
+
         <div class="group-button-game">
             <div class="row main-menu-row">
-                <a role="button" class="btn btn-lg main-button" id="btnCreateRoom">CREE UNE PARTIE</a>
+                <a role="button" class="btn btn-lg main-button hvr-shadow" id="btnCreateRoom">CREE UNE PARTIE</a>
 
                 <div style="display: none" class="create-room-div">
                     <h2 class="head-form">Crée une partie</h2>
@@ -55,8 +57,8 @@
                         </div>
 
                         <div class="group-button-create">
-                            <a role="button" class="btn btn-lg back-button" id="backCreateRoom">Retour</a>
-                            <a role="button" class="btn btn-lg submit-button" id="submitCreateRoom">Crée</a>
+                            <a role="button" class="btn btn-lg back-button hvr-icon-back hvr-shutter-out-horizontal" id="backCreateRoom"><i class="fa fa-chevron-circle-left hvr-icon"></i>  Retour</a>
+                            <a role="button" class="btn btn-lg submit-button hvr-icon-forward" id="submitCreateRoom">Crée  <i class="fa fa-chevron-circle-right hvr-icon"></i></a>
                         </div>
 
                         <input type="hidden" id="newRoom" name="newRoom" aria-describedby="basic-addon1" value="1">
@@ -65,8 +67,10 @@
             </div>
 
             <div class="row main-menu-row">
-                <a role="button" class="btn btn-lg main-button" id="btnJoinRoom">REJOINDRE UNE PARTIE</a>
+                <a role="button" class="btn btn-lg main-button hvr-shadow" id="btnJoinRoom">REJOINDRE UNE PARTIE</a>
                 <div style="display: none" class="join-room-div">
+                    <h2 class="head-form">Rejoindre une partie</h2>
+
                     <form action="" method="post" id="formJoinRoom">
                         <label for="name" class="main-menu-label">Nom de la partie
                             <span>
@@ -83,8 +87,8 @@
                         </label>
 
                         <div class="group-button-join">
-                            <a role="button" class="btn btn-lg back-button" id="backJoinRoom">Retour</a>
-                            <a role="button" class="btn btn-lg submit-button" id="submitJoinRoom">Rejoindre</a>
+                            <a role="button" class="btn btn-lg back-button hvr-icon-back hvr-shutter-out-horizontal" id="backJoinRoom"><i class="fa fa-chevron-circle-left hvr-icon"></i>  Retour</a>
+                            <a role="button" class="btn btn-lg submit-button hvr-icon-forward" id="submitJoinRoom">Rejoindre  <i class="fa fa-chevron-circle-right hvr-icon"></i></a>
                         </div>
 
                         <input type="hidden" id="joinRoom" name="joinRoom" aria-describedby="basic-addon1" value="1">
@@ -92,7 +96,7 @@
                 </div>
             </div>
 
-            <a role="button" class="btn btn-lg main-button" id="settings">COMMENT JOUER ?</a>
+            <a role="button" class="btn btn-lg main-button hvr-shadow" id="settings">COMMENT JOUER ?</a>
         </div>
     </div>
 {% endblock %}
