--- a/views/index.twig
+++ b/views/index.twig
@@ -5,10 +5,12 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="game-logo">
-            <a><img src="/images/logo-dog.gif"/></a>
-        </div>
+    <div id="landing-container">
+{#        <a>#}
+{#            <div class="game-logo">#}
+{#                <img src="/images/logo-dog.gif"/>#}
+{#            </div>#}
+{#        </a>#}
 
         <div class="group-button-game">
             <div class="row main-menu-row">
