--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,15 +3,20 @@
     src: url("../fonts/ViceCitySans.otf") format("opentype");
 }
 
-body {
-    min-height: 100vh;
-    text-align: center;
-    font-family: 'ViceCitySans' !important;
-    background: linear-gradient(180deg, rgba(33, 38, 41, 0.96) 18%, rgb(39, 37, 37) 100%);
+html, body {
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    color: #bfb8b8;
+    font-family: sans-serif;
+    background-color: #23282b !important;
 }
 
-.container {
-    width: 90% !important;
+#landing-container {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background: linear-gradient(0deg, rgba(35,40,43,0.7959558823529411) 18%, rgba(131,131,131,0.6222864145658263) 100%);
 }
 
 .main-menu-row {
