--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ html, body {
     background-color: #23282b !important;
 }
 
-#landing-container {
+#home-container {
     width: 100%;
     height: 100%;
     text-align: center;
@@ -36,24 +36,20 @@ html, body {
 }
 
 .group-button-game {
-    line-height: 1em;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .main-button {
-    margin: auto auto 2%;
-    min-width: 60%;
-    max-width: 70%;
-    width: 60%;
-    line-height: 4em !important;
-    -moz-box-shadow:    3px 3px 5px 6px #ccc;
-    -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+    width: 100% !important;
+    padding: 1.2em !important;
+    font-size: 1em !important;
+    box-shadow: 2px 3px 8px rgba(0, 0, 0, 0.4) !important;
     background-color: #992626 !important;
-    box-shadow: 2px 3px 8px rgba(0, 0, 0, 0.4);
     color: #bfb8b8 !important;
-    border: none;
-    padding: 1em;
-    border-radius: 0px !important;
+    margin-bottom: 5% !important;
 }
 
 input[type=text] {
@@ -182,5 +178,8 @@ input:focus {
 }
 
 .game-logo {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    line-height: 0.95;
 }
