--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,7 @@ html, body {
     background: linear-gradient(0deg, rgba(35,40,43,0.7959558823529411) 18%, rgba(131,131,131,0.6222864145658263) 100%);
 }
 
+
 .main-menu-row {
     display: block !important;
 }
@@ -56,7 +57,7 @@ input[type=text] {
     background-color: transparent;
     border: 1px solid #8a7a81;
     caret-color: gray;
-    margin: 0.5em 0 1em 0;
+    margin: 0.5em 0 0em 0;
     color: gray;
     padding: 0.9em;
     height: 1.2em;
@@ -134,17 +135,13 @@ input:focus {
 
 .submit-button {
     background-color: #801414b5 !important;
-    margin-top: 3%;
     color: #c4c4c4 !important;
-    width: 30%;
     border-radius: 0 !important;
 }
 
 .back-button {
     background-color: #801414b5 !important;
-    margin-top: 3%;
     color: #c4c4c4 !important;
-    width: 30%;
     border-radius: 0 !important;
 }
 
@@ -164,7 +161,7 @@ input:focus {
     filter: drop-shadow(2px 2px 4px black);
     color: #992626;
     text-align: left;
-    margin-bottom: 5%;
+    margin-bottom: 1em;
     font-size: 4em;
 }
 
@@ -189,9 +186,63 @@ input:focus {
 }
 
 .create-room-div {
-    padding: 5em;
+    padding: 3em;
 }
 
 .join-room-div {
-    padding: 5em;
+    padding: 3em;
 }
+
+@media (max-width: 768px) {
+    #logo {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 570px) {
+    .create-room-div {
+        padding: 1em;
+    }
+
+    .join-room-div {
+        padding: 1em;
+    }
+
+    .head-title-form {
+        filter: drop-shadow(2px 2px 4px black);
+        color: #992626;
+        text-align: left;
+        margin-bottom: 5%;
+        font-size: 35px;
+    }
+
+    .row {
+        margin: 0 !important;
+    }
+
+    .group-button-join {
+        margin-top: 3%;
+        width: 100%;
+    }
+
+    .group-button-create {
+        margin-top: 3%;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 370px) {
+    .card {
+        text-align: center;
+        cursor: pointer;
+        position: relative;
+        margin: 0.3em;
+        background-color: #393a40 !important;
+        color: #b5a1a1;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+        user-select: none;
+        width: 154px;
+        height: 100%;
+    }
+}
+
