--- a/views/index.twig
+++ b/views/index.twig
@@ -15,92 +15,20 @@
         <div class="group-button-game">
             <a role="button" class="btn btn-lg main-button hvr-shadow" id="btnCreateRoom">Crée une partie</a>
             <a role="button" class="btn btn-lg main-button hvr-shadow" id="btnJoinRoom">Rejoindre une partie</a>
-            <a role="button" class="btn btn-lg main-button hvr-shadow" id="btnShowsettings">Comment jouer ?</a>
+            <a role="button" class="btn btn-lg main-button hvr-shadow" id="btnShowInfo">Comment jouer ?</a>
         </div>
 
-        <div style="display: none" class="create-room-div">
-            <h2 class="head-title-form">Crée une partie</h2>
+        {% block joinRoom %}
+            {% include './main-menu/join-room.twig' %}
+        {% endblock %}
 
-            <form action="" method="post" id="formCreateRoom">
-                <div class="create-room-input">
-                    <label for="name" class="main-menu-label">NOM DE LA PARTIE
-                        <span>
-                            <input type="text" class="form-control" aria-label="nameRoom" id="nameRoom" name="nameRoom" aria-describedby="basic-addon1">
-                            <p class="game-name-error error"></p>
-                        </span>
-                    </label>
+        {% block createRoom %}
+            {% include './main-menu/create-room.twig' %}
+        {% endblock %}
 
-                    <label for="pseudo" class="main-menu-label">PSEUDO
-                        <span>
-                            <input type="text" class="form-control" aria-label="pseudoToCreate" name="pseudo" id="pseudoForCreate" class aria-describedby="basic-addon1">
-                            <p class="player-name-error error"></p>
-                        </span>
-                    </label>
-                    <a role="button" class="btn btn-lg main-button" id="createRoom">Crée</a>
-                </div>
-
-                <div class="row card-list">
-                    {% for key, cards in cardsRole %}
-                        <div class="row-card">
-                            <div class="card">
-                                <div class="card-body">
-                                    <div class="card-top">
-                                        <p class="card-title">{{ cards.role }}<i data-toggle="tooltip" data-html="true" data-placement="top" title="{{ cards.description }}" style="margin-left: 5%" class="question-mark fa fa-question-circle" aria-hidden="true"></i></p>
-                                        <p class="btn-incremented-counter btn-card-counter" data-children-input="card_{{ cards.id }}">+</p>
-                                        <p class="counter-card" id="card_{{ cards.id }}" type="text" value="0">0</p>
-                                    </div>
-                                    <div class="card-bottom" id="card-counter-{{ cards.id }}">
-                                        <p class="btn-decremented-counter btn-card-counter" data-children-input="card_{{ cards.id }}">-</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                    <p class="card-error"></p>
-                </div>
-
-                <div id="role-in-game">
-                </div>
-
-                <div class="group-button-create">
-                    <a role="button" class="btn btn-lg back-button hvr-icon-back hvr-shutter-out-horizontal" id="backCreateRoom"><i class="fa fa-chevron-circle-left hvr-icon"></i>  Retour</a>
-                    <a role="button" class="btn btn-lg submit-button hvr-icon-forward" id="submitCreateRoom">Crée  <i class="fa fa-chevron-circle-right hvr-icon"></i></a>
-                </div>
-
-                <input type="hidden" id="newRoom" name="newRoom" aria-describedby="basic-addon1" value="1">
-            </form>
-        </div>
-
-        <div style="display: none" class="join-room-div">
-            <h2 class="head-title-form">Rejoindre une partie</h2>
-
-            <form action="" method="post" id="formJoinRoom">
-                <label for="name" class="main-menu-label">Nom de la partie
-                    <span>
-                        <input type="text" class="form-control" aria-label="roomToJoin" id="roomToJoin" name="roomToJoin" aria-describedby="basic-addon1">
-                        <p class="game-name-error error"></p>
-                    </span>
-                </label>
-
-                <label for="pseudo" class="main-menu-label">Pseudo
-                    <span>
-                        <input type="text" class="form-control" aria-label="pseudoForJoin" name="pseudoForJoin" id="pseudoForJoin" class aria-describedby="basic-addon1">
-                        <p class="player-name-error error"></p>
-                    </span>
-                </label>
-
-                <div class="group-button-join">
-                    <a role="button" class="btn btn-lg back-button hvr-icon-back hvr-shutter-out-horizontal" id="backJoinRoom"><i class="fa fa-chevron-circle-left hvr-icon"></i>  Retour</a>
-                    <a role="button" class="btn btn-lg submit-button hvr-icon-forward" id="submitJoinRoom">Rejoindre  <i class="fa fa-chevron-circle-right hvr-icon"></i></a>
-                </div>
-
-                <input type="hidden" id="joinRoom" name="joinRoom" aria-describedby="basic-addon1" value="1">
-            </form>
-        </div>
-
-        <div style="display: none" class="settings-div">
-            <h2 class="head-title-form">Comment jouer à <i>The Lost Dog</i></h2>
-        </div>
+        {% block howTo %}
+            {% include './main-menu/how-to-learn.twig' %}
+        {% endblock %}
     </div>
 {% endblock %}
 
