--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -15,28 +15,30 @@
         <input type="hidden" id="maxPlayerLimit" value="{{ maxPlayerLimit }}">
         <input type="hidden" id="cardsInGame" data-value="{{ cardsInGame }}">
     </div>
+    <div class="room-container">
+        {% if admin == 0 %}
+            <p id="role"> Votre rôle est : </p>
+        {% endif %}
 
-    {% if admin == 0 %}
-        <p id="role"> Votre rôle est : </p>
-    {% endif %}
+        <h2 class="head-title-lobby">En attente de joueurs</h2>
 
-    <div class="head-list-people" style="text-align: center">
-        <span id="nameRoom">{{ nameRoom }}</span>
-        <span id="ingame-user"></span>/<span id="limit-user"></span>
+        <div class="game-informations" style="text-align: center">
+            <span id="nameRoom">{{ nameRoom }}</span><br>
+            <span id="ingame-user"></span>/<span id="limit-user"></span> joueur(s)
 
-        <div class="list-people" id="list-people">
+            <div class="list-people" id="list-people">
+            </div>
+
+            {% if admin == 1 %}
+                <a class="btn btn-primary" href="#" role="button" id="btn-launch-game">Lancer la partie</a>
+            {% endif %}
         </div>
 
-        {% if admin == 1 %}
-            <a class="btn btn-primary" href="#" role="button" id="btn-launch-game">Lancer la partie</a>
-        {% endif %}
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="panel panel-primary">
-                <div class="panel">
-                    <div class="panel-body">
+        <div class="container">
+            <div class="row">
+                <div class="panel panel-primary">
+                    <div class="panel">
+                        <div class="panel-body">
                         {% if admin == 1 %}
                             <ul class="chatAdmin">
 
@@ -45,6 +47,7 @@
                             <ul class="chat">
 
                             </ul>
+                        </div>
                     </div>
                 </div>
             </div>
