--- a/views/main-menu/join-room.twig
+++ b/views/main-menu/join-room.twig
@@ -11,7 +11,7 @@
 
         <label for="pseudo" class="main-menu-label">Pseudo
             <span>
-                <input type="text" class="form-control" aria-label="pseudoForJoin" name="pseudoForJoin" id="pseudoForJoin" class aria-describedby="basic-addon1">
+                <input type="text" class="form-control" aria-label="pseudoForJoin" name="pseudo" id="pseudoForJoin" class aria-describedby="basic-addon1">
                 <p class="player-name-error error"></p>
             </span>
         </label>
