--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -186,7 +186,7 @@ input[type=text] {
     border: 1px solid #8a7a81;
     caret-color: gray;
     margin: 0.5em 0 0em 0;
-    color: gray;
+    color: #ab3f3f !important;
     padding: 0.9em;
     height: 1.2em;
     width: 12em;
