--- a/views/index.twig
+++ b/views/index.twig
@@ -8,7 +8,7 @@
     <div id="home-container">
         <a href="/">
             <div class="game-logo">
-                <img id="logo" src="../images/Wolf_Logo.gif"/>
+                <img id="logo" src="../images/logo-dog.png"/>
             </div>
         </a>
 
