--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -20,36 +20,22 @@
             <p id="role"> Votre rôle est : </p>
         {% endif %}
 
-        <h2 class="head-title-lobby">En attente de joueurs</h2>
+        <div class="staging-div">
+            <h2 class="head-title-lobby">Staging</h2>
 
-        <div class="game-informations" style="text-align: center">
-            <span id="nameRoom">{{ nameRoom }}</span><br>
-            <span id="ingame-user"></span>/<span id="limit-user"></span> joueur(s)
-
-            <div class="list-people" id="list-people">
-            </div>
-
-            {% if admin == 1 %}
-                <a class="btn btn-primary" href="#" role="button" id="btn-launch-game">Lancer la partie</a>
-            {% endif %}
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="panel panel-primary">
-                    <div class="panel">
-                        <div class="panel-body">
-                        {% if admin == 1 %}
-                            <ul class="chatAdmin">
-
-                            </ul>
-                        {% endif %}
-                            <ul class="chat">
-
-                            </ul>
-                        </div>
-                    </div>
+            <div class="game-informations" style="text-align: center">
+                <div class="informations-staging">
+                    <span id="nameRoom">{{ nameRoom }}</span><br>
+                    <span id="ingame-user"></span>/<span id="limit-user"></span> joueur(s)
                 </div>
+
+
+                <div class="list-people" id="list-people">
+                </div>
+
+                {% if admin == 1 %}
+                    <a class="btn btn-primary" href="#" role="button" id="btn-launch-game">Lancer la partie</a>
+                {% endif %}
             </div>
         </div>
     </div>
