--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -210,7 +210,8 @@ input:focus {
 }
 
 #logo {
-    width: 40%;
+    width: 26%;
+    margin: 5%;
 }
 
 /*
@@ -219,7 +220,7 @@ input:focus {
 
 @media (max-width: 768px) {
     #logo {
-        width: 100%;
+        width: 70%;
     }
 }
 
