DESIGN WITH LOGO TERMINATE

--- a/views/main-menu/create-room.twig
+++ b/views/main-menu/create-room.twig
@@ -1,16 +1,16 @@
 <div style="display: none" class="create-room-div">
-    <h2 class="head-title-form">Crée une partie</h2>
+    <h2 class="head-title-form">CREE UNE PARTIE</h2>
 
     <form action="" method="post" id="formCreateRoom">
         <div class="create-room-input">
-            <label for="name" class="main-menu-label">NOM DE LA PARTIE
+            <label for="name" class="main-menu-label">Nom de la partie
                 <span>
                     <input type="text" class="form-control" aria-label="nameRoom" id="nameRoom" name="nameRoom" aria-describedby="basic-addon1">
                     <p class="game-name-error error"></p>
                 </span>
             </label>
 
-            <label for="pseudo" class="main-menu-label">PSEUDO
+            <label for="pseudo" class="main-menu-label">Pseudo
                 <span>
                     <input type="text" class="form-control" aria-label="pseudoToCreate" name="pseudo" id="pseudoForCreate" class aria-describedby="basic-addon1">
                     <p class="player-name-error error"></p>
