--- a/views/main-menu/how-to-learn.twig
+++ b/views/main-menu/how-to-learn.twig
@@ -1,5 +1,5 @@
 <div style="display: none" class="settings-div">
-    <h2 class="head-title-form">Comment jouer à <i>The Lost Dog</i></h2>
+    <h2 class="head-title-form">COMMENT JOUER A <i>THE LOST DOG</i></h2>
 
     <div class="jumbotron" id="story">
         <h1 class="display-4">L'histoire de chien perdu</h1>
