--- a/views/main-menu/join-room.twig
+++ b/views/main-menu/join-room.twig
@@ -1,5 +1,5 @@
 <div style="display: none" class="join-room-div">
-    <h2 class="head-title-form">Rejoindre une partie</h2>
+    <h2 class="head-title-form">REJOINDRE UNE PARTIE</h2>
 
     <form action="" method="post" id="formJoinRoom">
         <label for="name" class="main-menu-label">Nom de la partie
